--- a/src/components/Browser/Row/movieCard/movieCard.module.css
+++ b/src/components/Browser/Row/movieCard/movieCard.module.css
@@ -1,6 +1,6 @@
 .movieCard {
-    height: 150px;
-    width: 225px;
+    height: 200px;
+    width: 275px;
     margin: 3px;
 }
 
@@ -15,5 +15,14 @@
     cursor: pointer;
     transform: scale(1.1);
     transition: 0.2s;
+
+}
+
+@media only screen and (min-width: 579px) {
+
+    .movieCard {
+        height: 150px;
+        width: 225px;
+    }
 
 }
